--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^20.10.2",
+        "@types/nodemailer": "^6.4.14",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
         "eslint": "^8.55.0",
@@ -34,6 +35,7 @@
         "dotenv": "^16.4.0",
         "express": "^4.18.2",
         "helmet": "^7.1.0",
+        "nodemailer": "^6.9.8",
         "zod": "^3.22.4"
     }
 }
