--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "tsc",
         "start": "node dist/server.js",
         "start:dev": "tsx watch src/server.ts",
-        "test": "vitest --passWithNoTests"
+        "coverage": "typescript-coverage-report"
     },
     "keywords": [
         "typescript",
@@ -27,7 +27,8 @@
         "prettier": "^3.1.0",
         "prisma": "^5.8.1",
         "tsx": "^4.6.2",
-        "typescript": "^5.3.2"
+        "typescript": "^5.3.2",
+        "typescript-coverage-report": "^0.8.0"
     },
     "dependencies": {
         "@prisma/client": "5.8.1",
