--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# DB_HOST=
-# DB_PORT=
-# DB_NAME=
-# DB_USER=
-# DB_PASSWORD=
+MAILER_EMAIL=
+MAILER_PASS=
+
+MERCADO_LIVRE_CLIENT_ID=
+MERCADO_LIVRE_CLIENT_SECRET=
+MERCADO_LIVRE_REDIRECT_URI=
