--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.0.1",
         "prettier": "^3.1.0",
-        "prisma": "^5.8.1",
         "tsx": "^4.6.2",
         "typescript": "^5.3.2",
         "typescript-coverage-report": "^0.8.0"
     },
     "dependencies": {
-        "@prisma/client": "5.8.1",
+        "axios": "^1.6.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.0",
         "express": "^4.18.2",
