--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^20.10.2",
-        "@types/nodemailer": "^6.4.14",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
         "eslint": "^8.55.0",
@@ -30,11 +29,11 @@
         "typescript-coverage-report": "^0.8.0"
     },
     "dependencies": {
+        "axios": "^1.6.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.0",
         "express": "^4.18.2",
         "helmet": "^7.1.0",
-        "nodemailer": "^6.9.8",
         "zod": "^3.22.4"
     }
 }
