--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.0.1",
         "prettier": "^3.1.0",
+        "prisma": "^5.9.1",
         "tsx": "^4.6.2",
         "typescript": "^5.3.2",
         "typescript-coverage-report": "^0.8.0"
