--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "typescript-coverage-report": "^0.8.0"
     },
     "dependencies": {
+        "@prisma/client": "^5.9.1",
         "axios": "^1.6.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.0",
