--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.0.1",
         "prettier": "^3.1.0",
-        "prisma": "^5.9.1",
         "tsx": "^4.6.2",
         "typescript": "^5.3.2",
         "typescript-coverage-report": "^0.8.0"
     },
     "dependencies": {
-        "@prisma/client": "^5.9.1",
+        "@prisma/client": "5.9.1",
         "axios": "^1.6.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.0",
         "express": "^4.18.2",
         "helmet": "^7.1.0",
+        "prisma": "^5.9.1",
         "zod": "^3.22.4"
     }
 }
