--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "tsc",
         "start": "node dist/src/server.js",
         "start:dev": "tsx watch --no-warnings src/server.ts",
-        "coverage": "typescript-coverage-report"
+        "coverage": "typescript-coverage-report",
+        "test:dev": "vitest --watch"
     },
     "keywords": [
         "typescript",
@@ -18,15 +19,19 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^20.10.2",
+        "@types/supertest": "^6",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
+        "@vitest/coverage-v8": "^1.3.1",
         "eslint": "^8.55.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.0.1",
         "prettier": "^3.1.0",
+        "supertest": "^6.3.4",
         "tsx": "^4.6.2",
         "typescript": "^5.3.2",
-        "typescript-coverage-report": "^0.8.0"
+        "typescript-coverage-report": "^0.8.0",
+        "vitest": "^1.3.1"
     },
     "dependencies": {
         "@prisma/client": "5.9.1",
